[gd_scene load_steps=2 format=3 uid="uid://b31oekchnss6y"]

[ext_resource type="Script" path="res://Scenes/Levels/LevelComponents/killzone.gd" id="1_c5fqn"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_c5fqn")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_timer_timeout"]
